Fix Crash splitting translated string

BUG: 487581